# gitea-assistants

./: README.md  pyproject.toml
src/gitea_assistants/: main.py
